[package]
description = "hbbft consensus protocol Engine"
name = "hbbft_engine"
version = "0.0.1"
license = "GPL-3.0"
authors = ["David Forstenlechner <dforsten@gmail.com>"]

[lib]

[dependencies]
ethcore = { path = ".." }
inventory = "0.1"
hbbft = { git = "https://github.com/poanetwork/hbbft" }
serde_json = "1.0"

[dev-dependencies]
ethcore = { path = "..", features = ["test-helpers"] }

