[package]
description = "hbbft consensus protocol Engine"
name = "hbbft_engine"
version = "0.0.1"
license = "GPL-3.0"
authors = [
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "David Forstenlechner <dforsten@gmail.com>"
]

[lib]

[dependencies]
common-types = { path = "../types" }
ethcore = { path = ".." }
ethcore-io = { path = "../../util/io" }
ethcore-miner = { path = "../../miner" }
ethereum-types = "0.4"
ethkey = { path = "../../accounts/ethkey" }
hbbft = { git = "https://github.com/poanetwork/hbbft", rev = "70783871150a125d366f02bdd415d27f7464e417" }
hbbft_testing = { git = "https://github.com/poanetwork/hbbft" }
inventory = "0.1"
itertools = "0.5"
keccak-hash = "0.1"
log = "0.4"
parking_lot = "0.6"
rand = "0.6.5"
rlp = { version = "0.3.0", features = ["ethereum"] }
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ethcore = { path = "..", features = ["test-helpers"] }
ethcore-accounts = { path = "../../accounts" }
proptest = "0.9.2"
toml = "0.5.1"

[features]
# Include tools to facilitate test setup.
test-helpers = ["ethcore/test-helpers"]
